perubahan pada header

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="icon"  type="image/x-icon" href="gambar kafka.jpeg">
 
     <script>
-        // alert('ini web tentang kafka');
+        alert('ini web tentang kafka');
     </script>
 </head>
 <body>
     <header>
         <div class="pala">
-            <h2>Kaf<span>ka</span></h2>
+            <h2>Kafka<span>HSR</span></h2>
         </div>
         <div class="isi">
             <ul>
