--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Level Buronan: Sangat tinggi, tidak peduli hidup atau mati.
             <!-- <div class="buat"> -->
             <div class="namaoo">
             <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim expedita, reiciendis culpa dolores nihil architecto qui laudantium impedit, blanditiis sit eum labore voluptatibus? Quisquam, recusandae libero debitis rerum similique repudiandae.</p>
+            <p>Kafka merupakan karakter yang bagus untuk DOT Damage over Time adalah damage tambahan yang diberikan sebagai perpanjangan dari damage yang sudah diberikan sebelumnya</p>
         </div>
         <div class="momo">
             <div class="basic-attack">
