--- a/index.html
+++ b/index.html
@@ -252,16 +252,16 @@ Level Buronan: Sangat tinggi, tidak peduli hidup atau mati.
         </div>
             <div class="row">
                 <div class="column">
-                  <img src="gambar kafka.jpeg"  style="width:100%" onclick="myFunction(this);">
+                  <img src="https://i.pinimg.com/564x/29/64/20/29642062b2796a8404a3c242beb66f00.jpg"  style="width:100%" onclick="myFunction(this);">
                 </div>
                 <div class="column">
-                  <img src="https://upload-os-bbs.hoyolab.com/upload/2023/05/28/8034631/ea4e2d20864572134b02303477f41f86_8463815513116979171.png?x-oss-process=image%2Fresize%2Cs_1000%2Fauto-orient%2C0%2Finterlace%2C1%2Fformat%2Cwebp%2Fquality%2Cq_80" style="width:100%" onclick="myFunction(this);">
+                  <img src="https://i.pinimg.com/564x/8a/a9/90/8aa9905f733fe4b4fe851283ba8d1d0d.jpg" style="width:100%" onclick="myFunction(this);">
                 </div>
                 <div class="column">
-                  <img src="https://c4.wallpaperflare.com/wallpaper/944/956/868/kafka-honkai-star-rail-purple-hair-hd-wallpaper-preview.jpg"  style="width:100%" onclick="myFunction(this);">
+                  <img src="https://i.pinimg.com/564x/34/5c/c5/345cc52025bd1e26de5d35dd5d744633.jpg"  style="width:100%" onclick="myFunction(this);">
                 </div>
                 <div class="column">
-                  <img src="https://64.media.tumblr.com/75e286d1817d643c6d97358f63c98805/5322f14dc544b818-22/s1280x1920/2de32c742f8524e3b644c92fd5e8e456d978057e.jpg"  style="width:100%" onclick="myFunction(this);">
+                  <img src="https://i.pinimg.com/564x/34/5c/c5/345cc52025bd1e26de5d35dd5d744633.jpg"  style="width:100%" onclick="myFunction(this);">
                 </div>
               </div>
               
